Fix spacing and links

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1313,7 +1313,7 @@ a {
   }
 }
 .cid-u27JEgy2Dr {
-  padding-top: 6rem;
+  padding-top: 9rem;
   padding-bottom: 0rem;
   background-color: #000000;
 }
